--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     
   </head>
   <body>
+    <h1>"Rock Paper scissors</h1>
+    <h3>Best of Five</h3>
+    <button class="btn" id="rock">rock</button>
+    <button class="btn" id="paper">paper</button>
+    <button class="btn" id="scissors">scissors</button>
+    <div id="winner">
+
+    </div>
+    <div id="round"></div>
+    <div id="start"></div>
+    
 	<script src="script.js"></script>
   </body>
 </html>
